test/fail/duplicate-import/A.mo
module {
  public type T = Nat;
  public func f() : T = 1;
}
